fix a small typo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" /> -->
   <!-- Roboto Mono -->
   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono" /> -->
-  <title>selte-ts-template</title>
+  <title>svelte-ts-template</title>
 </head>
 
 <body>
