deploy: ee23244e970688dcd4714b3fe63c0ef879eace58

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" /> -->
   <!-- Roboto Mono -->
   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono" /> -->
-  <title>selte-ts-template</title>
+  <title>svelte-ts-template</title>
   <script type="module" crossorigin src="/svelte-ts-template/assets/index.6f4d74ea.js"></script>
   <link rel="modulepreload" href="/svelte-ts-template/assets/vendor.b00a0d5b.js">
 </head>
